# dapr-python-example

./: README.md  prometheus.yaml  start-infrastructure.sh
dapr/components/: binding-cron.yaml  pubsub.yaml  secrets-file.yaml  secrets.json  statestore.yaml
dapr/components-debug/: secrets-file.yaml  statestore.yaml
task-service/: pyproject.toml  start.sh
task-service/task_service/: main.py
task-service/task_service/weather_tasks/: model.py  repository.py
weather-service/: pyproject.toml  start.sh  weather.xml
weather-service/weather_service/: main.py
