[tool.poetry]
name = "weather-service"
version = "0.1.0"
description = ""
authors = ["Ihar Suvorau <ihar.suvorau@gmail.com>"]
packages = [{ include = "weather_service" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
dapr = "^1.10.0"
uvicorn = "^0.23.1"
httpx = "^0.24.1"
lxml = "^4.9.3"
dapr-ext-fastapi = "^1.10.0"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
